# EDKS-0003-V2-APACHE-SPARK-PARA-ENGENHARIA-DE-DADOS-KICKSTART

./: README.md  docker-compose.yml  pyproject.toml
src/02_setup/: 01_create_buckets.py  02_landing_csv.py  02_landing_json.py  02_landing_parquet.py
src/03_spark_hello_world/: 01_hello_world.ipynb  02_hello_world_minio.ipynb
src/03_spark_hello_world/.ipynb_checkpoints/: 01_hello_world-checkpoint.ipynb  02_hello_world_minio-checkpoint.ipynb
src/04_spark_etl/: 01_cloud_x_etl.ipynb  02_protheus_etl.ipynb  03_sap_etl_.ipynb  04_spark_write_modes.ipynb  05_spark_write_partitions.ipynb  06_spark_dfapi_sql.ipynb  07_spark_ui.ipynb  08_spark_lazy_evaluation.ipynb
src/04_spark_etl/.ipynb_checkpoints/: 01_cloud_x_etl-checkpoint.ipynb  02_protheus_etl-checkpoint.ipynb  03_sap_etl_-checkpoint.ipynb  04_spark_write_modes-checkpoint.ipynb  05_spark_write_partitions-checkpoint.ipynb  06_spark_dfapi_sql-checkpoint.ipynb  07_spark_ui-checkpoint.ipynb  08_spark_lazy_evaluation-checkpoint.ipynb
src/05_spark_datalake_house/: 00_delta.ipynb
src/06_spark_production/: readme.md
src/06_spark_production/.ipynb_checkpoints/: clients-checkpoint.py
